# spectral-prosody

./: AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: basic.rs
memory/: JOURNAL.md
src/: dial_scan.rs  error.rs  feature.rs  iso_breath.rs  laplacian_scan.rs  lib.rs  linalg.rs  metrical_graph.rs  midi.rs  phrase.rs  prosody.rs  rhyme_adjacency.rs  rhythm.rs  tradition_embedding.rs
