[package]
repository = "https://github.com/SuperInstance/spectral-prosody"
name = "spectral-prosody"
version = "0.1.0"
edition = "2021"
description = "Spectral graph theory applied to metrical patterns across languages"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
